--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -61,8 +61,7 @@ footer p {
 
 .scooter {
   display: block;
-  width: 289.23px;
-  height: 211.53px;
+  width: 90%;
   align-items: center;
   margin-bottom: 10px;
   margin-left: auto;
@@ -74,8 +73,7 @@ footer p {
 .apply-form {
   box-sizing: border-box;
   border-radius: 25px;
-  width: 300px;
-  height: 495px;
+  width: 90%;
   background-color: white;
   box-shadow: 5px 10px 15px grey;
   padding: 20px;
@@ -88,6 +86,7 @@ footer p {
 #lname,
 #phone,
 #email {
+  width: 95%;
   border: none;
   border-radius: 5px;
   background-color: #f4f4f5;
@@ -116,8 +115,7 @@ input[type="checkbox"] {
   background-color: #57eeab;
   border: none;
   border-radius: 5px;
-  width: 250px;
-  height: 55px;
+  width: 95%;
   padding: 10px;
 }
 
@@ -175,7 +173,6 @@ footer {
   background-color: #ff8480;
   border: none;
   width: 100%;
-  height: 40px;
   margin-bottom: 20px;
 }
 
@@ -209,13 +206,13 @@ div.icons {
     font-size: 17px;
     line-height: 20px;
     margin: 0;
+    text-align: left;
   }
 
   /* resized scooter image based on XD file */
 
   .scooter {
-    width: 420.64px;
-    height: 307.65px;
+    width: 100%;
     margin-bottom: 20px;
   }
 
@@ -224,8 +221,7 @@ div.icons {
 
   .apply-form {
     box-sizing: border-box;
-    width: 605px;
-    height: 596px;
+    width: 100%;
   }
 
   #fname,
@@ -255,9 +251,7 @@ div.icons {
 
   .drive {
     font-size: 32px;
-    width: 525px;
-    height: 64px;
-    padding: 10px;
+    width: 100%;
   }
 
   .apply-form p {
@@ -292,19 +286,18 @@ div.icons {
   }
 
   #hours {
-    width: 50px;
-    height: auto;
+    width: 20%;
     margin-right: 10px;
   }
 
   #city {
-    width: 350px;
-    height: auto;
+    width: 60%;
   }
 
   /* styling calculate button */
 
   .calculate {
+    width: 60%;
     margin-left: 5px;
     text-align: center;
   }
@@ -321,14 +314,16 @@ div.icons {
     width: 80%;
   }
 
-  /* starting flex so I can place the next to each other */
-  main {
-    display: flex;
+  h1 {
+    font-size: 60px;
+  }
+
+  .main-section-form p:nth-child(2) {
+    font-size: 12px;
   }
 
   .scooter {
-    width: 819.36px;
-    height: 599.26px;
+    width: 100%;
     margin-bottom: 20px;
   }
 
@@ -336,14 +331,16 @@ div.icons {
   /* resized apply-form image based on XD file */
 
   .apply-form {
-    width: 535px;
-    height: 590px;
+    width: 100%;
   }
 
   .drive {
-    width: 452px;
-    height: 57px;
+    width: 100%;
   }
 
+  /* starting flex so I can place the next to each other */
+  main {
+    display: flex;
+  }
 
 }
