--- a/midterm/style.css
+++ b/midterm/style.css
@@ -351,6 +351,11 @@ Start Styling About Page
   font-weight: bold;
 }
 
+.restaurant-text {
+  width: 80%;
+  margin: 0 auto;
+}
+
 .competitive-friends {
   background-color: #F2F2F2;
   padding: 1.5rem 0;
@@ -388,6 +393,11 @@ Start Styling About Page
   padding: .5rem;
 }
 
+.fitness-text {
+  width: 80%;
+  margin: 0 auto;
+}
+
 /* Styling text after the newsletter section  */
 
 .climbing {
@@ -395,7 +405,7 @@ Start Styling About Page
   padding: 1.5rem 0;
 }
 
-.climbing-container {
+.climbing-text {
   width: 80%;
   margin: 0 auto;
 }
@@ -720,31 +730,69 @@ Tablet View
   .restaurant {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 2rem;
+    padding: 3rem;
   }
 
-  .bar-pic {
+  .bar-img {
     grid-column: 1/2;
-    margin-right: 1.5rem;
+    width: 75%;
   }
 
   .competitive-friends {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
     padding: 3rem;
   }
 
   .friends-text {
     grid-column: 1/2;
+    grid-row: 1/2;
   }
 
   .bowling-img {
     grid-column: 2/3;
+    grid-row: 1/2;
+    width: 75%;
   }
 
   .newsletter {
     display: grid;
     grid-template-columns: 75% 25%;
+  }
+
+  .fitness {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 3rem;
+  }
+
+  .fitness-text {
+    margin-left: 2.5rem;
+  }
+
+  .fitness-img {
+    width: 75%;
+    grid-column: 1/2;
+    margin-right: 2.5rem;
+  }
+
+  .climbing {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    padding: 3rem;
+  }
+
+  .climbing-text {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  .climbing-img {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    width: 75%;
   }
 
   .thanks h1 {
@@ -964,7 +1012,7 @@ Desktop View
     grid-row: 1/2;
   }
 
-  /* Styling entertainment section so the contect sits in a two column grid */
+  /* Styling entertainment section so the content sits in a two column grid */
 
   .entertainment h2 {
     margin: 0.5rem 0;
@@ -998,6 +1046,74 @@ Desktop View
   .entertainment-grid .learn-more {
     width: 50%;
     font-size: 1rem;
+  }
+
+  /***********************************
+   Styling About page for Desktop View 
+   ************************************/
+
+  /* Making the construction section into a two column grid so the content sits next to each other */
+
+  .construction {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 2rem;
+  }
+
+  .construction-text {
+    grid-column: 1/2;
+  }
+
+  .construction-pic {
+    grid-column: 2/3;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  /* Making the Who, What, Where section sit ext to each other in a three column grid */
+
+  .about-sec {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 1rem;
+    padding: 3rem;
+  }
+
+  .who {
+    grid-column: 1/2;
+  }
+
+  .what {
+    grid-column: 2/3;
+  }
+
+  .where {
+    grid-column: 3/4;
+  }
+
+  /* Adjusting newsletter section by increasing font size and making it text align right so it sits closer to the button */
+
+  .newsletter {
+    grid-template-columns: 60% 40%;
+    grid-gap: 1rem;
+  }
+
+  .newsletter p {
+    font-size: 1.5rem;
+    text-align: right;
+  }
+
+  .sa,
+  .ac,
+  .pcl,
+  .cibc {
+    width: 10%;
+    height: auto;
+  }
+
+  .special-logos {
+    display: flex;
+    justify-content: space-between;
   }
 
   /*************************************
