--- a/midterm/style.css
+++ b/midterm/style.css
@@ -1122,21 +1122,32 @@ Desktop View
 
   /* Creating a 2 column grid so the top information and contact form sit next to each other */
 
-  .grid-1 {
+  .communicate-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
+    padding-top: 4rem;
+    padding-bottom: 3rem;
+    grid-gap: 15px;
   }
 
   .communicate {
     grid-column: 1/2;
     grid-row: 1/2;
+    margin-right: 1rem;
   }
 
   .contact-form {
+    box-sizing: border-box;
+    padding: 2rem;
     grid-column: 2/3;
     grid-row: 1/2;
-    width: 90%;
+    width: 80%;
+    margin: 0;
+  }
+
+  .contact-icons {
+    width: 100%;
   }
 
   /* Creating a 2 column grid so the location information and map sit next to each other */
