--- a/midterm/style.css
+++ b/midterm/style.css
@@ -1114,6 +1114,7 @@ Desktop View
   .special-logos {
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
 
   /*************************************
