fixed nav bar and grids

--- a/style.css
+++ b/style.css
@@ -534,23 +534,7 @@ HOME PAGE TABLET VIEW
   .portfolio-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(11, 1fr);
   }
-
-  .img {
-    width: 50%;
-  }
-
-  .ux-ui {
-    grid-column: 1/2;
-    grid-row: 1/2;
-  }
-
-  .happy-trails {
-    grid-column: 2/3;
-    grid-row: 1/2;
-  }
-
 
 }
 
@@ -589,8 +573,17 @@ HOME PAGE DESKTOP VIEW
     width: 65%;
   }
 
+  h5 {
+    margin-top: 25px;
+  }
+
   .blockquote {
     text-align: left;
+  }
+
+  .view,
+  .print {
+    padding: 10px 100px;
   }
 
   .social {
@@ -599,9 +592,10 @@ HOME PAGE DESKTOP VIEW
     margin: 0 auto;
   }
 
-  .main-container {
+  .about-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-gap: 25px;
   }
 
   .section-1 {
