--- a/style.css
+++ b/style.css
@@ -286,9 +286,9 @@ CONTACT PAGE
   color: white;
 }
 
-/***************************
- PORTFOLIO PAGE MOBILE VIEW 
- ****************************/
+/**************
+ PORTFOLIO PAGE
+ *************/
 
 .img {
   width: 100%;
@@ -296,9 +296,17 @@ CONTACT PAGE
   margin-bottom: 10px;
 }
 
+.portfolio-head {
+  margin-top: 20px;
+}
+
 .footer-sec {
   background-color: #B9D1E2;
 }
+
+/*******
+FOOTER 
+*********/
 
 footer {
   width: 90%;
@@ -528,6 +536,13 @@ HOME PAGE TABLET VIEW
     grid-template-columns: 1fr 1fr;
   }
 
+  .img {
+    width: 95%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
 }
 
 /*************
@@ -600,9 +615,9 @@ HOME PAGE DESKTOP VIEW
     grid-column: 2/3;
   }
 
-  /************
-  CONTACT PAGE 
-  ************/
+  /*************************
+  CONTACT PAGE DESKTOP VIEW
+  **************************/
 
   .number,
   .email,
@@ -616,6 +631,10 @@ HOME PAGE DESKTOP VIEW
   .fa-instagram,
   .fa-facebook-square {
     font-size: 2.3rem;
+  }
+
+  .icon-sec {
+    margin-bottom: 40px;
   }
 
   .info-grid {
@@ -665,6 +684,7 @@ HOME PAGE DESKTOP VIEW
   }
 
   .btn {
+    margin-top: 20px;
     width: 15%;
   }
 
@@ -672,5 +692,20 @@ HOME PAGE DESKTOP VIEW
   .facebook-footer {
     font-size: 1.5rem;
   }
+
+  .contact-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 50px;
+    margin-bottom: 75px;
+  }
+
+  /**************************
+  PORTFOLIO PAGE DESKTOP PAGE 
+  ******************************/
+  .img {
+    width: 100%;
+  }
+
 
 }
